...
    <string name="title_activity_roll_for_loot">Roll for Loot</string>
    <string name="title_activity_edit_settings">Edit Settings</string>
    <string name="title_activity_edit_feats_list">Edit Feats</string>
    <string name="title_activity_edit_feat">Edit Feat</string>
    <string name="title_activity_edit_contacts_list">Edit Contacts</string>
    <string name="title_activity_edit_contact">Edit Contact</string>
    <string name="title_activity_custom_lists">Custom Lists</string>
    <string name="title_activity_edit_notes_list">Personal Notes Activity</string>
    <string name="title_activity_edit_note">Edit Note Activity</string>
    <string name="title_activity_edit_spell">Edit Spell Activity</string>
    <string name="title_activity_edit_spell_book">Edit Spellbook Activity</string>
    <string name="title_activity_compendium">Compendium Activity</string>
    <string name="title_activity_manage_player_characters">Manage Player Characters</string>
...

    <string name="label_threat_title">Threat Level</string>
    <string name="label_xp_title">Threat Level</string>

    <!--Edit Data Strings -->
    <string name="editdata_button_test">TEST</string>
    <string name="editdata_manage_storage">Manage Storage</string>
    <string name="editdata_button_edit_feats">Feats</string>
    <string name="editdata_button_edit_contacts">Contacts</string>
    <string name="editdata_button_edit_custom_lists">Custom Lists</string>
    <string name="editdata_button_edit_custom_monsters">Custom Monsters</string>
    <string name="editdata_button_edit_personal_notes">Personal Notes</string>
    <string name="editdata_button_edit_spells">Spell Book</string>
    <string name="editdata_button_edit_map">Map Editor</string>

    <!-- Main Activity Strings -->
    <string name="main_button_measure_encounter">Measure Encounter</string>
    <string name="main_button_edit_databases">Edit Databases</string>
    <string name="main_button_view_compendium">D&amp;D Compendium</string>
    <string name="main_button_view_monsters">Monster Manual</string>
    <string name="main_button_view_magic_items">Magic Items Vault</string>
    <string name="main_button_edit_logsheets">Log Sheets</string>
    <string name="main_button_roll_for_loot">Roll for Loot</string>
    <string name="main_button_view_logs">View Logs</string>
...
    <string name="sv_casting_time">Casting Time</string>
    <string name="sv_range">Range</string>
    <string name="sv_components">Components</string>
    <string name="sv_duration">Duration</string>

    <!-- Manage List Activity -->
    <string name="ml_add_button">Add</string>
    <string name="ml_delete_button">Delete</string>
    <string name="ml_edit_button">Edit</string>
    <string name="ml_clear_button">Clear</string>
    <string name="ml_cancel_button">Cancel</string>
    <string name="ml_save_button">Save</string>

    <!-- faction strings -->
    <string name="faction_none">None</string>
    <string name="faction_order_of_gauntlet">Order of the Gauntlet</string>
    <string name="faction_lords_alliance">Lord\'s Alliance</string>
    <string name="faction_emerald_enclave">Emerald Enclave</string>
...
    <string name="st_save_backup_desc">This will save the working database to private internal storage</string>
    <string name="st_import_backup_desc">This will replace the working database with the data stored in the backup internal storage</string>
    <string name="st_import_external_desc">This will replace the working database with the data stored in the external storage location. You should backup the working data first before you do this.</string>
    <string name="st_reset_desc">This will reset all the data with the default data stored in the apk.</string>

    <!-- storage titles foe the databases -->
    <string name="st_db_logsheet">Logsheets Database</string>
    <string name="st_db_encounter">Encounter Database</string>
    <string name="st_db_compendium">Compendium Database</string>

    <!-- view entity strings -->
    <string name="cell_entity_category">Category: %s</string>
    <string name="cell_entity_title">Entity: %d</string>

...
