<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.soupthatisthick.util.activity.ViewListActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/ml_search_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:hint="@string/sv_search_hint_descriptive"
            android:imeOptions="actionSearch"
            android:inputType="textAutoCorrect"
            style="@style/AppTheme.EditField"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:onClick="onClickClearSearchTextButton"
            android:src="@drawable/ic_control_clear"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mv_search"
            android:layout_weight="0.1"
            android:onClick="onClickSearchButton"
            android:visibility="gone"/>
    </LinearLayout>

    <!-- header information -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Scroll">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/el_header"
            >
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eil_name_label"
                    style="@style/AppTheme.BigHeader"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/eil_name_edit"
                    style="@style/AppTheme.BigHeader"
                    />
            </TableRow>
        </TableLayout>

    </LinearLayout>


    <!-- the list view -->
    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/ml_list_view"
        style="@style/AppTheme.List"
        >
    </ExpandableListView>

    <!--the controls -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TableRow>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ml_add_button"
                android:id="@+id/ml_add_button"
                android:src="@drawable/ic_control_add"
                style="@style/AppTheme.Button"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ml_delete_button"
                android:id="@+id/ml_delete_button"
                android:src="@drawable/ic_control_delete"
                style="@style/AppTheme.Button"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ml_clear_button"
                android:id="@+id/ml_clear_button"
                android:src="@drawable/ic_control_clear"
                style="@style/AppTheme.Button"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ml_edit_button"
                android:id="@+id/ml_edit_button"
                android:src="@drawable/ic_control_edit"
                style="@style/AppTheme.Button"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ml_save_button"
                android:id="@+id/ml_save_button"
                android:src="@drawable/ic_control_save"
                style="@style/AppTheme.Button"
                />
        </TableRow>

    </TableLayout>
</LinearLayout>
