...

    <!-- search results group -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/resultsGroup"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/theSearchEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:hint="@string/sv_search_hint_descriptive"
                android:imeOptions="actionSearch"
                android:inputType="textAutoCorrect"
...
            android:layout_weight="0"
            >
            <TableRow>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/theAddToListButton"
                    android:layout_weight="1"
                    android:onClick="onAddToListButtonClicked"
                    android:text="@string/vc_add_to_item_list"
                    style="@style/AppTheme.SmallButton"
                    />
            </TableRow>
...
